--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trade2Go</title>
-    <script src="../script.js" defer></script>
+    <script src="script.js"  defer></script>
 </head>
 <body>
 
 
-
+<h1>Trade2Go</h1>
     
 </body>
 </html>
