--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -11,5 +11,8 @@
 
 <h1>Trade2Go</h1>
     
+
+<button type="submit">Kirjaudu sisään</button>
+<button type="submit">Rekisteröidy</button>
 </body>
 </html>
