--- a/front-end/public/register.html
+++ b/front-end/public/register.html
@@ -11,15 +11,28 @@
 <body>
 
     <div class="login-container">
-        <h2>Kirjaudu sisään Trade2Go appiin! 😎</h2>
+        <h2>Rekisteröidy Trade2Go appiin! 💯</h2>
         <form action="#" method="POST">
+            <!-- FirstName -->
+            <label for="firstName">First Name:</label>
+            <input type="text" id="firstName" name="firstName" required>
+            <br>
+            <br>
+
+            <!-- LastName -->
+            <label for="lastName">Last Name:</label>
+            <input type="text" id="lastName" name="lastName" required>
+            <br><br>
 
             <!-- EmailAddress -->
             <label for="emailAddress">Email Address:</label>
             <input type="email" id="emailAddress" name="emailAddress" required>
             <br><br>
 
-
+            <!-- PhoneNumber -->
+            <label for="phoneNumber">Phone Number:</label>
+            <input type="tel" id="phoneNumber" name="phoneNumber" required>
+            <br><br>
 
             <!-- Password -->
             <label for="password">Password:</label>
