--- a/front-end/public/html/index.html
+++ b/front-end/public/html/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trade2Go</title>
-    <script src="../script.js" defer></script>
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<h1>Testiteksti</h1>
-
-    
+    <div class="container">
+        <h2>Welcome to Trade2Go</h2>
+        <div class="button-group">
+            <!-- Nappulat Login ja Register -->
+            <button onclick="window.location.href='login.html'">Login</button>
+            <button onclick="window.location.href='register.html'">Register</button>
+        </div>
+    </div>
 </body>
 </html>
