I took Vilis' changes in 37ae2b9faacacbc6fc474a5235db0957d1340a52 and copypasted into production app code

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trade2Go</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js"  defer></script>
 </head>
 <body>
-
-
-<h1>Trade2Go</h1>
-    
-
-<button type="submit">Kirjaudu sisään</button>
-<button type="submit">Rekisteröidy</button>
+    <div class="container">
+        <h2>Welcome to Trade2Go</h2>
+        <div class="button-group">
+            <!-- Nappulat Login ja Register -->
+            <button onclick="window.location.href='login.html'">Login</button>
+            <button onclick="window.location.href='register.html'">Register</button>
+        </div>
+    </div>
 </body>
 </html>
