--- a/front-end/public/login.html
+++ b/front-end/public/login.html
@@ -11,26 +11,20 @@
 <body>
 
     <div class="login-container">
-        <h2>Kirjaudu sisään Trade2Go appiin! 😎</h2>
-        <form action="#" method="POST">
+        <h2>Login</h2>
+        <form id="loginForm">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
 
-            <!-- EmailAddress -->
-            <label for="emailAddress">Email Address:</label>
-            <input type="email" id="emailAddress" name="emailAddress" required>
-            <br><br>
-
-
-
-            <!-- Password -->
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-            <br><br>
 
-
-
-            <!-- Submit Button -->
             <button type="submit">Login</button>
         </form>
+        <!-- Nappi vasempaan yläkulmaan -->
+        <div class="back-button">
+            <button onclick="window.location.href='index.html'">Back to Home</button>
+        </div>
     </div>
 
 </body>
