Added Mongoose connection, models, backend logic for adding user

--- a/front-end/public/register.html
+++ b/front-end/public/register.html
@@ -13,12 +13,18 @@
     <div class="login-container">
         <h2>Rekisteröidy Trade2Go appiin! 💯</h2>
         <form action="#" method="POST">
+            <!-- User name -->
+            <label for="userName">Username:</label>
+            <input type="text" id="userName" name="userName" required>
+            <br>
+            <br>
+            
             <!-- FirstName -->
             <label for="firstName">First Name:</label>
             <input type="text" id="firstName" name="firstName" required>
             <br>
             <br>
-
+            
             <!-- LastName -->
             <label for="lastName">Last Name:</label>
             <input type="text" id="lastName" name="lastName" required>
