--- a/front-end/public/login.html
+++ b/front-end/public/login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trade2Go</title>
-    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -26,7 +25,9 @@
             <button onclick="window.location.href='index.html'">Back to Home</button>
         </div>
     </div>
-
+<script src="https://cdn.jsdelivr.net/npm/axios@1.7.7/dist/axios.min.js"></script>
+        <script src="script.js" defer></script>
+        
 </body>
     
 </body>
