--- a/front-end/public/item1.html
+++ b/front-end/public/item1.html
@@ -18,15 +18,15 @@
         }
 
         /* Set image placeholder style */
-        .card-img-top {
+        .carousel-item {
             background-color: #e0e0e0; /* Light gray background */
             width: 100%;
-            height: 150px;
-            display: flex;
+            height: 250px; /* Larger height */
+            display: position;
             align-items: center;
             justify-content: center;
             color: #888;
-            font-size: 1.2em;
+            font-size: 1.5em; /* Slightly larger font */
             font-weight: bold;
             border-radius: 10px 10px 0 0;
         }
@@ -40,7 +40,7 @@
         }
 
         .item-box-detail {
-            width: 50%; /* Set width to 50% of the screen size */
+            width: 30%; /* Set narrower width */
             background-color: white;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -81,10 +81,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a> <!-- Link to index.html -->
+                <a class="nav-link" href="index.html">Etusivu</a> <!-- Link to index.html -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="itembox.html">Item Boxes</a>
+                <a class="nav-link" href="itembox.html">Vaihtoesineet</a>
             </li>
         </ul>
     </div>
@@ -94,12 +94,33 @@
 <div class="item-box-container">
     <div class="item-box-detail">
         <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
+            <!-- Carousel Start -->
+            <div id="carouselPlaceholder" class="carousel slide card-img-top" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/front-end/images/kitara1.jpg" alt="Kitara 1" class="d-block w-100 h-100">
+                    </div>
+                    <div class="carousel-item">
+                        Placeholder Image 2
+                    </div>
+                    <div class="carousel-item">
+                        Placeholder Image 3
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselPlaceholder" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselPlaceholder" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
+            
+            <!-- Carousel End -->
             <div class="card-body">
-                <h5 class="card-title">Item 1 Name</h5>
-                <p class="card-text">Detailed description of Item 1 goes here. You can add more information about the item.</p>
+                <h5 class="card-title">Akustinen kitara</h5>
+                <p class="card-text">Vaihdan oman akustisen kitaran ukuleleen. Kitara on erinomaisessa kunnossa ja sitä on käytetty vain muutaman kerran.</p>
                 <a href="trade.html" class="btn btn-green">Trade</a> <!-- Link to trade action -->
             </div>
         </div>
