--- a/front-end/public/itembox.html
+++ b/front-end/public/itembox.html
@@ -34,14 +34,14 @@
         .item-grid {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 50px;
             justify-content: space-between;
-            padding: 20px;
+            padding: 50px;
         }
 
         /* Set each item box to take up 30% of the width */
         .item-box {
-            width: 30%; /* 3 boxes in each row */
+            width: 20%; /* 3 boxes in each row */
             background-color: white;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -81,10 +81,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a> <!-- Link to index.html -->
+                <a class="nav-link" href="index.html">Etusivu</a> <!-- Link to index.html -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="itembox.html">Item Boxes</a>
+                <a class="nav-link" href="itembox.html">Vaihtoesineet</a>
             </li>
         </ul>
     </div>
@@ -97,10 +97,10 @@
 <div class="item-box">
     <div class="card h-100">
         <div class="card-img-top">
-            Image Placeholder
+            <img src="/front-end/images/kitara1.jpg" alt="Kitara 1" class="d-block w-100 h-100">
         </div>
         <div class="card-body d-flex flex-column">
-            <p class="card-text">Item 1 description goes here.</p>
+            <p class="card-text">Akustinen kitara vaihdossa.</p>
             <a href="item1.html" class="btn btn-green mt-auto">Trade</a> <!-- Link to item1.html -->
         </div>
     </div>
