--- a/front-end/public/itembox.html
+++ b/front-end/public/itembox.html
@@ -253,5 +253,31 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const token = localStorage.getItem("token");
+    
+        // Jos token puuttuu, ohjataan käyttäjä takaisin kirjautumissivulle
+        if (!token) {
+            alert("Sinun täytyy kirjautua sisään päästäksesi tälle sivulle.");
+            window.location.href = "login.html";
+        }
+    
+        // Lisätarkistuksen tekemällä pyynnön back-endiin tokenin kelvollisuuden tarkistamiseksi
+        axios
+            .get("http://localhost:3003/api/verifyToken", {
+                headers: { Authorization: `Bearer ${token}` }
+            })
+            .then((response) => {
+                // Token on kelvollinen, jatketaan normaalisti
+                console.log("Token valid, accessing dashboard");
+            })
+            .catch((error) => {
+                // Jos token ei ole kelvollinen, ohjaa käyttäjä kirjautumissivulle
+                alert("Sinun täytyy kirjautua sisään päästäksesi tälle sivulle.");
+                window.location.href = "login.html";
+            });
+    });
+</script>
 </body>
 </html>
