--- a/front-end/public/itembox.html
+++ b/front-end/public/itembox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trade2Go - Item Boxes</title>
+    <title>Item Trading Website</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Custom styling for green buttons */
@@ -17,6 +17,7 @@
         }
 
         /* Set image placeholder style */
+       /* Teams testi */
         .card-img-top {
             background-color: #e0e0e0; /* Light gray background */
             width: 100%;
@@ -41,243 +42,98 @@
 
         /* Set each item box to take up 30% of the width */
         .item-box {
-            width: 20%; /* 3 boxes in each row */
+            width: 30%;
             background-color: white;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+            padding: 20px;
+            margin: 20px;
         }
-
-        .item-box .card-body {
+        .item-box img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+        .item-grid {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            height: 100%;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 50px;
         }
-
-        /* Navigation bar styling */
-        .navbar {
-            background-color: #343a40;
-        }
-
-        .navbar-brand, .navbar-nav .nav-link {
-            color: white !important;
-        }
-
-        .navbar-nav .nav-link:hover {
-            color: #28a745 !important;
+        .btn-green {
+            background-color: #28a745;
+            color: white;
         }
     </style>
 </head>
 <body>
 
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="index.html">Trade2Go</a> <!-- Link to index.html -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Etusivu</a> <!-- Link to index.html -->
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="itembox.html">Vaihtoesineet</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-
-<!-- Item boxes content -->
-<div class="item-grid">
-<!-- Item Box 1 -->
-<div class="item-box">
-    <div class="card h-100">
-        <div class="card-img-top">
-            <img src="/front-end/images/kitara1.jpg" alt="Kitara 1" class="d-block w-100 h-100">
-        </div>
-        <div class="card-body d-flex flex-column">
-            <p class="card-text">Akustinen kitara vaihdossa.</p>
-            <a href="item1.html" class="btn btn-green mt-auto">Trade</a> <!-- Link to item1.html -->
-        </div>
+<div class="container">
+    <div class="item-grid" id="items-container">
+        <!-- Item boxes will be inserted here -->
     </div>
 </div>
 
-
-    <!-- Item Box 2 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 2 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Item Box 3 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 3 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Item Box 4 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 4 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Item Box 5 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 5 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Item Box 6 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 6 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Item Box 7 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 7 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Item Box 8 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 8 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Item Box 9 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 9 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Item Box 10 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 10 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Item Box 11 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 11 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Item Box 12 -->
-    <div class="item-box">
-        <div class="card h-100">
-            <div class="card-img-top">
-                Image Placeholder
-            </div>
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">Item 12 description goes here.</p>
-                <button class="btn btn-green mt-auto">Trade</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
-    document.addEventListener("DOMContentLoaded", () => {
-        const token = localStorage.getItem("token");
-    
-        // Jos token puuttuu, ohjataan käyttäjä takaisin kirjautumissivulle
-        if (!token) {
-            alert("Sinun täytyy kirjautua sisään päästäksesi tälle sivulle.");
-            window.location.href = "login.html";
-        }
-    
-        // Lisätarkistuksen tekemällä pyynnön back-endiin tokenin kelvollisuuden tarkistamiseksi
-        axios
-            .get("http://localhost:3003/api/verifyToken", {
-                headers: { Authorization: `Bearer ${token}` }
-            })
-            .then((response) => {
-                // Token on kelvollinen, jatketaan normaalisti
-                console.log("Token valid, accessing dashboard");
-            })
-            .catch((error) => {
-                // Jos token ei ole kelvollinen, ohjaa käyttäjä kirjautumissivulle
-                alert("Sinun täytyy kirjautua sisään päästäksesi tälle sivulle.");
-                window.location.href = "login.html";
-            });
+// Function to display the items
+function displayItems(items) {
+    const container = document.getElementById('items-container');
+    container.innerHTML = '';  // Clear the container before adding new items
+
+    items.forEach(item => {
+        // Create the item box container
+        const itemDiv = document.createElement('div');
+        itemDiv.classList.add('item-box');
+
+        // Create and append item name
+        const itemName = document.createElement('h3');
+        itemName.textContent = item.itemName;
+        itemDiv.appendChild(itemName);
+
+        // Create and append item description
+        const itemDesc = document.createElement('p');
+        itemDesc.textContent = item.itemDesc;
+        itemDiv.appendChild(itemDesc);
+
+        // Create and append user name
+        const userName = document.createElement('p');
+        userName.textContent = `User: ${item.user.userName}`;
+        itemDiv.appendChild(userName);
+
+        // Create and append phone number
+        const phoneNumber = document.createElement('p');
+        phoneNumber.textContent = `Phone: ${item.user.phoneNumber}`;
+        itemDiv.appendChild(phoneNumber);
+
+        // Create and append a trade button
+        const tradeBtn = document.createElement('button');
+        tradeBtn.classList.add('btn', 'btn-green');
+        tradeBtn.textContent = 'Trade';
+        tradeBtn.onclick = () => alert('Initiate trade for ' + item.itemName);
+        itemDiv.appendChild(tradeBtn);
+
+        // Append the item box to the container
+        container.appendChild(itemDiv);
     });
+}
+
+// Function to fetch the items using Axios
+function fetchItems() {
+    axios.get('http://localhost:3003/api/items')  // Replace with your actual API URL
+        .then(response => {
+            displayItems(response.data);  // Pass the fetched items to display function
+        })
+        .catch(error => {
+            console.error('Error fetching items:', error);
+            alert('Failed to load items.');
+        });
+}
+
+// Call the fetchItems function to load the items on page load
+fetchItems();
 </script>
+
 </body>
 </html>
