--- a/front-end/public/itembox.html
+++ b/front-end/public/itembox.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="form-group">
                             <label for="img-url">Imgur Image Link</label>
-                            <input type="url" class="form-control" id="img-url" placeholder="https://imgur.com/example.jpg" required>
+                            <input type="url" class="form-control" id="img-url" placeholder="https://imgur.com/example.jpg">
                         </div>
                         <button type="submit" class="btn btn-green">Lisää esine</button>
                     </form>                    
