added Omat Esineet button which shows the user's items

--- a/front-end/public/itembox.html
+++ b/front-end/public/itembox.html
@@ -31,6 +31,14 @@
         <button class="btn btn-green" id="add-item-button">Lisää esine</button>
     </div>
 
+    <!-- "My Items" button and container -->
+    <div class="my-items-container">
+        <button class="btn btn-primary" id="my-items-button">Omat Esineet</button>
+    </div>
+    <div class="container" id="my-items-container" style="display: none;">
+        <!-- User's items will be displayed here -->
+    </div>
+    
     <div class="container">
         <div class="item-grid" id="items-container">
             <!-- Item boxes will be inserted here -->
