--- a/front-end/public/itembox.html
+++ b/front-end/public/itembox.html
@@ -31,14 +31,29 @@
         <button class="btn btn-green" id="add-item-button">Lisää esine</button>
     </div>
 
-    <!-- "My Items" button and container -->
+    <!-- "My Items" button -->
     <div class="my-items-container">
         <button class="btn btn-primary" id="my-items-button">Omat Esineet</button>
     </div>
-    <div class="container" id="my-items-container" style="display: none;">
-        <!-- User's items will be displayed here -->
+
+    <!-- Modal for displaying items -->
+    <div id="items-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <h3>Your Items</h3>
+            <div id="modal-items-container">
+                <!-- User items will be displayed here -->
+            </div>
+        </div>
     </div>
-    
+
+    <div class="container">
+        <div class="item-grid" id="items-container">
+            <!-- Item boxes will be inserted here -->
+        </div>
+    </div>
+
+
     <div class="container">
         <div class="item-grid" id="items-container">
             <!-- Item boxes will be inserted here -->
@@ -66,8 +81,8 @@
                             <textarea class="form-control" id="item-desc" required></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="img-url">Imgur Image Link</label>
-                            <input type="url" class="form-control" id="img-url" placeholder="https://imgur.com/example.jpg">
+                            <label for="img-url">Kuva linkki</label>
+                            <input type="url" class="form-control" id="img-url" placeholder="https://i.imgur.com/example.jpg">
                         </div>
                         <button type="submit" class="btn btn-green">Lisää esine</button>
                     </form>                    
