--- a/front-end/public/itembox.html
+++ b/front-end/public/itembox.html
@@ -40,7 +40,7 @@
     <div id="items-modal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
-            <h3>Your Items</h3>
+            <h3>Omat Esineet</h3>
             <div id="modal-items-container">
                 <!-- User items will be displayed here -->
             </div>
@@ -78,7 +78,7 @@
                             <input type="url" class="form-control" id="img-url" placeholder="https://i.imgur.com/example.jpg">
                         </div>
                         <button type="submit" class="btn btn-green">Lisää esine</button>
-                    </form>                    
+                    </form>
                 </div>
             </div>
         </div>
