kommentit lisätty, register ja login suomeks, navbar tummaks

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -8,12 +8,12 @@
     <script src="script.js"  defer></script>
 </head>
 <body>
-    <div class="container">
-        <h2>Welcome to Trade2Go</h2>
+    <div class="container2">
+        <h2>Trade2Go</h2>
         <div class="button-group">
             <!-- Nappulat Login ja Register -->
-            <button onclick="window.location.href='login.html'">Login</button>
-            <button onclick="window.location.href='register.html'">Register</button>
+            <button onclick="window.location.href='login.html'">Kirjaudu sisään</button>
+            <button onclick="window.location.href='register.html'">Rekisteröidy</button>
         </div>
     </div>
 </body>
