--- a/front-end/public/login.html
+++ b/front-end/public/login.html
@@ -10,25 +10,25 @@
 <body>
 
 <body>
-
+    <!-- Kirjautumislomake -->
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>Kirjaudu sisään</h2>
         <form id="loginForm">
-            <label for="email">Email:</label>
+            <label for="email">Sähköpostiosoite:</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="password">Password:</label>
+            <label for="password">Salasana:</label>
             <input type="password" id="password" name="password" required>
 
-            <button type="submit">Login</button>
+            <button type="submit">Kirjaudu sisään</button>
         </form>
-        <!-- Nappi vasempaan yläkulmaan -->
+        <!-- Etusivu nappi vasempaan yläkulmaan -->
         <div class="back-button">
-            <button onclick="window.location.href='index.html'">Back to Home</button>
+            <button onclick="window.location.href='index.html'">Takaisin Etusivulle</button>
         </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/axios@1.7.7/dist/axios.min.js"></script>
-        <script src="script.js" defer></script>
+<script src="script.js" defer></script>
         
 </body>
     
