added log out button, added a token check

--- a/front-end/public/itembox.html
+++ b/front-end/public/itembox.html
@@ -23,6 +23,11 @@
                     <a class="nav-link" href="index.html">Etusivu</a>
                 </li>
             </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <button id="logoutButton" class="btn btn-outline-light">Kirjaudu ulos</button>
+                </li>
+            </ul>
         </div>
     </nav>
 
