--- a/front-end/public/item1.html
+++ b/front-end/public/item1.html
@@ -74,14 +74,14 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="index.html">Trade2Go</a> <!-- Link to index.html -->
+    <a class="navbar-brand" href="https://trade2go.onrender.com/index.html">Trade2Go</a> <!-- Link to index.html -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">Etusivu</a> <!-- Link to index.html -->
+                <a class="nav-link" href="https://trade2go.onrender.com/index.html">Etusivu</a> <!-- Link to index.html -->
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="itembox.html">Vaihtoesineet</a>
@@ -116,7 +116,7 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            
+
             <!-- Carousel End -->
             <div class="card-body">
                 <h5 class="card-title">Akustinen kitara</h5>
