--- a/front-end/public/itembox.html
+++ b/front-end/public/itembox.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Etusivu</a>
+                    <a class="nav-link" href="https://trade2go.onrender.com/index.html">Etusivu</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
